# clean_rfi

./: .gitignore  Cargo.toml  README.md  flake.nix  pyproject.toml
benches/: benchmarks.rs
src/: algos.rs  io.rs  lib.rs  main.rs  math.rs
src/math/: mask.rs  mean.rs  mod.rs  var.rs
