[package]
name = "clean_rfi"
version = "0.1.0"
edition = "2021"

[dependencies]
byte-slice-cast = "1"
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
faer = "0.18"
memmap2 = "0.9"
psrdada = "0.4"
sigproc_filterbank = "0.4"

[dependencies.pulp]
version = "*"        # Use version from faer as the constraint
features = ["macro"]

[profile.dev.package.faer]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"

[[bench]]
name = "benchmarks"
harness = false

[dev-dependencies]
faer = { version = "0.18", features = ["rand"] }
criterion = "0.4"
rand = "0.8"
