[package]
name = "clean_rfi"
version = "0.1.0"
edition = "2021"

[dependencies]
byte-slice-cast = "1"
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
faer = "0.18"
memmap2 = "0.9"
psrdada = "0.4"
sigproc_filterbank = "0.4"
nanstats = { git = "https://github.com/kiranshila/nanstats" }
# Python deps
faer-ext = { version = "0.1", features = ["ndarray"], optional = true }
pyo3 = { version = "0.21", features = ["extension-module"], optional = true }
numpy = { version = "0.21", optional = true }


[features]
default = []
nightly = ["faer/nightly", "nanstats/nightly"]
python = ["dep:pyo3", "dep:numpy", "dep:faer-ext"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies.pulp]
# Use version from faer as the constraint
version = "*"
features = ["macro"]

[profile.dev.package.faer]
opt-level = 3

[profile.release]
codegen-units = 1
strip = true

[[bench]]
name = "benchmarks"
harness = false

[dev-dependencies]
faer = { version = "0.18", features = ["rand"] }
criterion = "0.4"
rand = "0.8"
