[package]
name = "clean_rfi"
version = "0.1.0"
edition = "2021"

[dependencies]
faer = "0.18"
nanstats = { git = "https://github.com/kiranshila/nanstats" }

# CLI deps
psrdada = { version = "0.4", optional = true }
sigproc_filterbank = { version = "0.4", optional = true }
memmap2 = { version = "0.9", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
color-eyre = { version = "0.6", optional = true }
byte-slice-cast = { version = "1", optional = true }

# Python deps
faer-ext = { version = "0.1", features = ["ndarray"], optional = true }
pyo3 = { version = "0.21", features = ["extension-module"], optional = true }
numpy = { version = "0.21", optional = true }

[features]
default = []
nightly = ["faer/nightly", "nanstats/nightly"]
cli = [
    "dep:psrdada",
    "dep:sigproc_filterbank",
    "dep:memmap2",
    "dep:clap",
    "dep:color-eyre",
    "dep:byte-slice-cast",
]
python = ["dep:pyo3", "dep:numpy", "dep:faer-ext"]

[[bin]]
name = "clean_rfi"
required-features = ["cli"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies.pulp]
# Use version from faer as the constraint
version = "*"
features = ["macro"]

[profile.dev.package.faer]
opt-level = 3

[profile.release]
codegen-units = 1
strip = true

[[bench]]
name = "benchmarks"
harness = false

[dev-dependencies]
faer = { version = "0.18", features = ["rand"] }
criterion = "0.4"
rand = "0.8"
