[project]
name = "clean_rfi"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = ["numpy>=1.16.0"]

[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[tool.maturin]
profile = "release"
features = ["python"]
#manifest-path = "Cargo.toml"
#bindings = "pyo3"
skip-auditwheel = false
strip = true
